--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
             <input type="button" value="÷" onclick="writeNumber('÷')">
      
             <input type="button" value="C" id="clear">
-            <input type="button">
+            <input type="button" value="=" id="calc">
          </div>
      
          <div class="result">
-             <h2></h2>
+             <input type="text" id="n1">
+             <input type="text" id="operator">
+             <input type="text" id="n2">
+             <div id="final-result"></div>
          </div>
     </div>
 
